frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress
  namespace: production

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:

      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80

      - path: /api/tasks
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80

      - path: /api/user-orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
